# boost_testing

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  binary_serialization_test.cpp  boost_testing.sln  boundary_class.hpp  build.ps1  build.sh  md5.cpp  md5.h  text_serialization_test.cpp  udp_lib.hpp  udp_simple_cli.cpp  udp_simple_ser.cpp  vcpkg.json
base64/: base64.vcxproj  base64.vcxproj.filters
binary_serialization/: binary_serialization.vcxproj  binary_serialization.vcxproj.filters  packages.config
parser_json/: parser_json.vcxproj  parser_json.vcxproj.filters
parser_xml/: parser_xml.vcxproj  parser_xml.vcxproj.filters
src/: base64.cpp  md5.cpp  md5.h  parser_json.cpp  parser_xml.cpp  serialization_binary.cpp  serialization_classes.hpp  serialization_text.cpp  udp_lib.hpp  udp_simple_cli.cpp  udp_simple_ser.cpp
text_serialization/: text_serialization.vcxproj  text_serialization.vcxproj.filters
udp_client/: udp_client.vcxproj  udp_client.vcxproj.filters
udp_server/: packages.config  udp_server.vcxproj  udp_server.vcxproj.filters
